--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit"
   },
   "author": "subhranshu choudhury",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
