--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline todo-list
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
@@ -28,10 +28,10 @@ jobs:
         run: npm test
 
       - name: Build Docker image
-        run: docker build -t your_dockerhub_username/your_app_name .
+        run: docker build -t kdcl3110/todo-app-jenkins .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker image
-        run: docker push your_dockerhub_username/your_app_name:latest
+        run: docker push kdcl3110/todo-app-jenkins:latest
